fix: 修复linux下时间错误

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "start": "nodemon",
+    "dev": "cross-env NODE_ENV=development nodemon",
+    "start": "cross-env NODE_ENV=production nodemon",
     "test": "jest"
   },
   "keywords": [
@@ -29,6 +30,7 @@
     "koa-body": "^4.2.0",
     "koa-router": "^10.1.1",
     "log4js": "^6.4.2",
+    "moment": "^2.29.4",
     "mysql2": "^2.3.3",
     "redis": "3.1.2",
     "reflect-metadata": "^0.1.13",
@@ -39,6 +41,7 @@
   },
   "devDependencies": {
     "@types/crypto-js": "^4.1.1",
+    "cross-env": "^7.0.3",
     "crypto-js": "^4.1.1"
   }
 }
